--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 spring.profiles.active=dev
 
-
-#spring.liquibase.enabled=true
-#spring.liquibase.change-log=classpath:db/liquibase-masterChangeLog.yaml
-
-#telegram.bot.token= 6652832346:AAHzWRRvar8eyoVC3lpVYC4e0OqFkvIQnUk
-spring.datasource.url=jdbc:postgresql://localhost:5432/shelter
+spring.datasource.url=
 spring.datasource.username=public
 spring.datasource.password=public
 
