--- a/src/main/resources/liquibase/liquibase-masterChangeLog.yaml
+++ b/src/main/resources/liquibase/liquibase-masterChangeLog.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
     - include:
           file: liquibase/changeSets/pets.sql
+    - include:
+          file: liquibase/changeSets/owners.sql
