create contacts , I'm not sure if it works

--- a/src/main/resources/liquibase/liquibase-masterChangeLog.yaml
+++ b/src/main/resources/liquibase/liquibase-masterChangeLog.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
           file: liquibase/changeSets/pets.sql
     - include:
           file: liquibase/changeSets/owners.sql
+    - include:
+        file: liquibase/changeSets/contacts.sql
