--- a/src/main/resources/liquibase/liquibase-masterChangeLog.yaml
+++ b/src/main/resources/liquibase/liquibase-masterChangeLog.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
         file: liquibase/changeSets/contacts.sql
     - include:
         file: liquibase/changeSets/reports.sql
+    -   include:
+            file: liquibase/changeSets/adoptionRequest.sql
