--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=dev
 
-
+path-to-photo-folder=./photo
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/shelter
 spring.datasource.username=public
