telegram bot token property added to pulic application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:liquibase/liquibase-masterChangeLog.yaml
 
 spring.servlet.multipart.max-file-size=300KB
+
+telegram.bot.token=
