--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,15 +1,16 @@
 spring.profiles.active=dev
 
-spring.datasource.url=jdbc:h2:mem
+
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=default
 spring.datasource.password=default
 
 spring.liquibase.default-schema=
 spring.jpa.properties.hibernate.default_schema=
 
-telegram.bot.token=
+telegram.bot.token=6469296748:AAF6swfdq0N27kSAfpFnb5km9klPDVBeoNM
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:liquibase/liquibase-masterChangeLog.yaml
