--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.profiles.active=dev
 
+path-to-photo-folder=./photo
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/shelter
+spring.datasource.username=public
+spring.datasource.password=public
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:liquibase/liquibase-masterChangeLog.yaml
+
+spring.servlet.multipart.max-file-size=300KB
+
+telegram.bot.token=
