--- a/src/main/resources/liquibase/liquibase-masterChangeLog.yaml
+++ b/src/main/resources/liquibase/liquibase-masterChangeLog.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: liquibase/changeSets/dogs.sql
   - include:
       file: liquibase/changeSets/cats.sql
+  - include:
+      file: liquibase/changeSets/unregisteredOwner.sql
