create free about methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.liquibase.change-log=classpath:liquibase/liquibase-masterChangeLog.yaml
 
 spring.servlet.multipart.max-file-size=300KB
 
-telegram.bot.token=
+telegram.bot.token=public
